# tpm2-tools

./: Makefile.am  configure.ac
